--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,6 +8,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+    .mulka{
+        width: 165px;
+        height: 44px;
+    }
 }
 
 nav {
