--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,3 +1,4 @@
+//============================mobile=================
 .nav_mobile {
     @media screen and (min-width: 768px) {
         display: none;
@@ -134,5 +135,64 @@ nav {
             }
         }
     }
+}
+
+//============================comp=================
+.navigation-comp {
+  display: none;
+}
+
+@media screen and (min-width: 768px){
+  .navigation-comp {
+    display: flex;
+    height: 41px; 
+    justify-content: space-between;
   }
-  
+
+  .logo{
+
+    .mulka{
+      width: 200px;
+      height: 40px;
+      filter: 0;
+    }
+  }
+
+  .navigation-ul-comp {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-end;
+    
+    .medias {
+      width: 70%;
+      gap: 30px;
+      height: 30px;
+      display: flex;
+      justify-content: center;
+      
+    }
+
+    svg {
+      width: 35px;
+      height: 35px;
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    }
+
+    
+    
+    a {
+      font-family: 'Open Sans';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 130%;
+      color: #000000;
+      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+
+    
+  }
+}
+
